Overview of changes in gnome-calculator 47.alpha
    * Updated translations
    * Support VND currency #387 (Robert Roth)
    * Fixed incorrect event handling #392 (Robert Roth)
    * Removed Shift left/right dropdown #330 (Robert Roth)
    * Improved popover remove buttons #401 (Robert Roth)
    * Use result format instead of number format #399 (Robert Roth)
    * Ported to Adwaita adaptive dialogs (Robert Roth)
    * Disable undo button if nothing to undo #280 (Robert Roth)
    * Metainfo improvements (Andre Klapper)
    * Keep last conversion options at launch #351 (Robert Roth)
    * Minor improvements to the undo button !166 (Automeris naranja)
    * Make sure to use the correct app id for development builds !170 (Christopher Davis)
    * Stop using orange accent color !169 (Alice Mikhaylenko)
    * A11y announce status changes !172 (Lukáš Tyrychtr)

Overview of changes in gnome-calculator 46.0
    * Updated translations
    * Metainfo improvements (Alexandre Franke, Andre Klapper)
    
Overview of changes in gnome-calculator 46.rc
    * Updated translations
    * Metainfo (homepage, developer id) improvements (Sophie Herold, Robert Roth)

Overview of changes in gnome-calculator 46.beta
    * Updated translations

Overview of changes in gnome-calculator 46.alpha
    * Updated translations
    * Allow substring search in the unit selection drop-downs #338 (Lukáš Tyrychtr)
    * libsoup library usage update (Robert Roth)
    * appdata updates !158 (Sabri Ünal)
    * Ported some components to adwaita !159 (Pig)
    * Support Argentine Peso currency #370 (Pacho Ramos)
    * Reload conversion rates if in search-provider conversion fails !162 (Vladislav Yegorov)
    * Add Troy ounce (ozt) as new unit !109 (Gwyneth Morgan)


Overview of changes in gnome-calculator 45.0.2
    * Updated translations

Overview of changes in gnome-calculator 45.0.1
    * Retagging release

Overview of changes in gnome-calculator 45.rc
    * Updated translations
