@@ -83,6 +83,21 @@
   <launchable type="desktop-id">@app_id@.desktop</launchable>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="47~beta" date="2024-08-02" type="development">
+      <description>
+        <ul>
+          <li>Updated translations</li>
+          <li>Forced LTR for buttons !171 (Khalid Abu Shawarib)</li>
+          <li>Added kWh, MJ, KJ unit support #417 (Robert Roth)</li>
+          <li>Sort conversion categories alphabetically #395 (Robert Roth)</li>
+          <li>Removed obsolete bulgarian translations #402 (Robert Roth)</li>
+          <li>Only allow alphanumeric values for variable names #396 (Robert Roth)</li>
+          <li>Replace base label with buttons in programming mode !173 (Clément Mathieu--Drif)</li>
+          <li>Updated flathub badge !174 (Brage Fuglseth)</li>
+          <li>Use new adwaita spinner widget !175 (Cristopher Davis)</li>
+        </ul>
+      </description>
+    </release>
     <release version="47~alpha" date="2024-06-29" type="development">
       <description>
         <ul>
