@@ -1,3 +1,14 @@
+Overview of changes in gnome-calculator 47.beta
+    * Updated translations
+    * Force LTR for buttons !171 (Khalid Abu Shawarib)
+    * Added kWh, MJ, KJ unit support #417 (Robert Roth)
+    * Sort conversion categories alphabetically #395 (Robert Roth)
+    * Removed obsolete bulgarian translations #402 (Robert Roth)
+    * Only allow alphanumeric values for variable names #396 (Robert Roth)
+    * Replace base_label with buttons !173 (Clément Mathieu--Drif)
+    * Updated flathub badge !174 (Brage Fuglseth)
+    * Use adwaita spinner !175 (Cristopher Davis)
+
 Overview of changes in gnome-calculator 47.alpha
     * Updated translations
     * Support VND currency #387 (Robert Roth)
